--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,4 @@
 # Project
-
 [project]
 name = "actions-tools"
 description = "GitHub Actions Tools for Python"
@@ -28,24 +27,42 @@ Source = "https://github.com/cssnr/actions-tools"
 Issues = "https://github.com/cssnr/actions-tools/issues"
 
 # Setup Tools
-
 [tool.setuptools.dynamic]
 version = { attr = "actions.__version__" }
 
 # Build System
-
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 # Black
-
+# https://black.readthedocs.io/en/stable/usage_and_configuration/
 [tool.black]
 line-length = 119
 extend-exclude = '(\.github)'
 
-# Ruff
+# Coverage
+# https://coverage.readthedocs.io/en/latest/
+[tool.coverage.run]
+omit = ["*.egg-info/*", ".github/*"]
+source = ["src"]
 
+# Isort
+# https://pycqa.github.io/isort/docs/configuration/options.html
+[tool.isort]
+profile = "black"
+lines_after_imports = 2
+src_paths = ["src", "test"]
+skip = [".github"]
+
+# Mypy
+# https://mypy.readthedocs.io/en/stable/config_file.html
+[tool.mypy]
+#ignore_missing_imports = true
+exclude = ["venv"]
+
+# Ruff
+# https://docs.astral.sh/ruff/configuration/
 [tool.ruff]
 line-length = 119
 target-version = "py313"
@@ -53,17 +70,3 @@ exclude = [".github"]
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "B", "Q"]
-
-# Coverage
-
-[tool.coverage.run]
-omit = ["*.egg-info/*", ".github/*"]
-source = ["src"]
-
-# Isort
-
-[tool.isort]
-profile = "black"
-lines_after_imports = 2
-src_paths = ["src", "test"]
-skip = [".github"]
