--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["3.11", "3.12", "3.13", "3.14"]
+        version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     name: "Test ${{ matrix.version }}"
     permissions:
       contents: read
